tests/js_error/source_locations/expression/yield/await_throws_module.js
let promise = new Promise(() => {});
Object.defineProperty(promise, 'constructor', { get() { throw new Error(); } });

async function *generator() {
  yield promise;
}

let gen = generator();
await gen.next();